# Live-Camera-Streaming-and-Image-Filters-in-OpenCV

./: .gitignore  CMakeLists.txt  README.md  analyze_performance.py  benchmark.cpp  benchmark.h  input_handler.cpp  input_handler.h  main  main.cpp  performance_resolution.csv  performance_transforms.csv  pyvenv.cfg  shaders.cpp  shaders.h  types.h  utils.cpp  utils.h
data/: performance_report.txt  raw_data_20251017_210513.csv  raw_data_resolution_20251017_212547.csv  raw_data_resolution_20251018_130047.csv  raw_data_transforms_20251017_212545.csv  raw_data_transforms_20251018_130036.csv
data/tables/: bottom_performers.csv  bottom_performers_resolution.csv  bottom_performers_transforms.csv  detailed_statistics.csv  detailed_statistics_resolution.csv  detailed_statistics_transforms.csv  gpu_speedup.csv  gpu_speedup_transforms.csv  mode_comparison.csv  mode_comparison_resolution.csv  mode_comparison_transforms.csv  resolution_impact.csv  resolution_summary.csv  top_performers.csv  top_performers_resolution.csv  top_performers_transforms.csv  transform_impact.csv  transform_impact_transforms.csv  transform_overhead.csv
filters/: filters.cpp  filters.h
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
report/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
